Sidebar content and Form adjustments and fixes
- Add extra space at the end of each .panel-content to add some "breath" to elements
- Remove unecessary display:  none; used for development reasons in the past
- Font-weight adjustments
- Add word-break to .checkboxes label and .table-title elemetns

--- a/app/sass/form.scss
+++ b/app/sass/form.scss
@@ -180,3 +180,7 @@ textarea {
 input[type="checkbox"] {
 	cursor: pointer;
 }
+
+.checkbox > label {
+	word-break: break-all;
+}
