--- a/app/sass/sidebarPannel.scss
+++ b/app/sass/sidebarPannel.scss
@@ -35,7 +35,11 @@
 .temp-hide .panel-content {padding: 0;}
 
 .panel-content {
-	padding: 8px 12px;
+	padding: 8px 12px 18px;
+}
+
+.panel-content .form-group:last-child {
+	margin-bottom: 0;
 }
 
 ////////////////////////////////////////////////////////////////////////////////
@@ -49,8 +53,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 // .column-details
 ////////////////////////////////////////////////////////////////////////////////
-.column-details.temp-expanded header {display: none;}
-
 .column-details {
 	padding: 12px 8px;
 	border: 1px solid #ddd;
@@ -68,9 +70,11 @@
 
 .column-details .table-title {
 	margin: 0;
+	line-height: 1.2em;
 	font-size: 12px;
-	font-weight: bold;
+	font-weight: 500;
 	font-family: monospace;
+	word-break: break-all;
 }
 
 .column-details .relationship {
